--- a/app/src/main/res/layout/activity_show_tasks.xml
+++ b/app/src/main/res/layout/activity_show_tasks.xml
@@ -1,9 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:padding="0dp"
-    tools:context="com.self.app.ShowTasks">
+    tools:context="com.self.app.ShowTasks"
+    android:orientation="vertical" >
+
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" >
 
     <ListView
         android:layout_width="match_parent"
@@ -16,6 +22,22 @@
         android:padding="10dp">
         </ListView>
 
+        <ViewStub
+            android:id="@android:id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout="@layout/empty" />
+
+    </FrameLayout>
+
+
+
+    <LinearLayout
+        style="@android:style/ButtonBar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
 
     <Button
         android:layout_width="match_parent"
@@ -29,5 +51,6 @@
         android:textColor="#fefefe"
         android:background="#ffff000a"
         android:clickable="false" />
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
