--- a/app/src/main/res/layout/activity_show_tasks.xml
+++ b/app/src/main/res/layout/activity_show_tasks.xml
@@ -22,12 +22,15 @@
         android:padding="10dp">
         </ListView>
 
-        <ViewStub
-            android:id="@android:id/empty"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout="@layout/empty" />
+            android:src="@drawable/nothing"
+            android:id="@+id/imageView7"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:scaleType="fitXY"
+            android:layout_gravity="center_horizontal|top" />
 
     </FrameLayout>
 
