--- a/app/src/main/res/layout/empty.xml
+++ b/app/src/main/res/layout/empty.xml
@@ -4,12 +4,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="All Clean. Add Tasks Now."
-        android:id="@+id/notasks"
-        android:layout_gravity="center_horizontal" />
+        android:src="@drawable/nothing"
+        android:id="@+id/imageView7"
+        android:padding="0dp"
+        android:layout_margin="0dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center_horizontal|top" />
 
 </LinearLayout>
