--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -114,7 +114,17 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="40dp"
-            android:layout_marginLeft="40dp" />
+            android:layout_marginLeft="40dp"
+            android:visibility="gone" />
+
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBar"
+            android:layout_gravity="center_horizontal"
+            android:numStars="3"
+            android:mirrorForRtl="false"
+            android:stepSize="1" />
 
         <LinearLayout
             android:orientation="horizontal"
