--- a/app/src/main/res/layout/activity_show_tasks.xml
+++ b/app/src/main/res/layout/activity_show_tasks.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/emptylist"
-            android:layout_gravity="center_horizontal|top"
+            android:layout_gravity="center"
             android:src="@drawable/empty_basket" />
 
 
@@ -38,7 +38,8 @@
         style="@android:style/ButtonBar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:background="#ffff000a">
 
     <Button
         android:layout_width="match_parent"
@@ -51,7 +52,8 @@
         android:textSize="60px"
         android:textColor="#fefefe"
         android:background="#ffff000a"
-        android:clickable="false" />
+        android:clickable="false"
+        android:capitalize="sentences" />
     </LinearLayout>
 
 </LinearLayout>
