--- a/app/src/main/res/layout/task_row_brief.xml
+++ b/app/src/main/res/layout/task_row_brief.xml
@@ -2,5 +2,42 @@
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"></LinearLayout>
+    android:layout_height="60dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:backgrsound="#f6f1eb"
+    android:background="@drawable/box_shadow">
+
+    <ImageView
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:id="@+id/priorityColor"
+        android:background="@android:color/holo_blue_light" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/taskTitle"
+            android:layout_weight="5"
+            android:gravity="center_vertical"
+            android:textSize="22sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/taskSubtitle"
+            android:gravity="center_vertical"
+            android:textSize="13sp"
+            android:textIsSelectable="false"
+            android:layout_weight="1"
+            android:layout_marginBottom="2dp" />
+    </LinearLayout>
+</LinearLayout>
