--- a/app/src/main/res/layout/task_row_brief.xml
+++ b/app/src/main/res/layout/task_row_brief.xml
@@ -4,8 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="60dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:backgrsound="#f6f1eb"
-    android:background="@drawable/box_shadow">
+    android:background="#f6f1eb">
 
     <ImageView
         android:layout_width="10dp"
