--- a/app/src/main/res/drawable/box_shadow.xml
+++ b/app/src/main/res/drawable/box_shadow.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <stroke
-        android:width="5dp"
+        android:width="2dp"
         android:color="#EBDDE2" />
 
     <padding
@@ -14,7 +14,7 @@
     <gradient
         android:centerColor="@color/White"
         android:endColor="@color/White"
-        android:startColor="@color/White" />
+        android:startColor="#EBDDE2" />
 
     <corners android:radius="8dp" />
 
